--- a/index.html
+++ b/index.html
@@ -3,133 +3,268 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Portafolio - Lizeth Daniela Villamil Gil</title>
+
+  <!-- Tipografía profesional -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
+
+  <!-- HEADER -->
   <header>
+
     <img src="profile.jpg" alt="Foto de Lizeth Daniela Villamil Gil" class="profile-pic">
+
     <h1>Lizeth Daniela Villamil Gil</h1>
+
     <p>Economista | Estudiante de Estadística | Analista de Riesgos y Calidad</p>
+
   </header>
 
+
+  <!-- NAVBAR -->
   <nav>
     <ul>
+
       <li><a href="#about">Sobre mí</a></li>
+
       <li><a href="#experience">Experiencia</a></li>
+
       <li><a href="#projects">Proyectos</a></li>
+
       <li><a href="#skills">Habilidades</a></li>
-      <li><a href="#achievements">Logros e Investigación</a></li>
+
+      <li><a href="#achievements">Logros</a></li>
+
       <li><a href="#values">Valores</a></li>
-      <li><a href="#vision">Visión de Futuro</a></li>
+
+      <li><a href="#vision">Visión</a></li>
+
       <li><a href="#interests">Intereses</a></li>
+
       <li><a href="#contact">Contacto</a></li>
+
     </ul>
   </nav>
 
+
+  <!-- SOBRE MI -->
   <section id="about">
+
     <h2>Sobre mí</h2>
+
     <p>
-      Soy economista y estudiante de estadística en la Universidad Santo Tomás. 
-      Actualmente trabajo como contratista en el ICETEX desde octubre de 2024, 
-      donde apoyo la optimización y sistematización de procedimientos para administrar de manera eficiente los recursos institucionales. 
-      Me apasiona el análisis de riesgos financieros y no financieros, así como la gestión de calidad en procesos organizacionales.  
-      Me considero una persona joven, tierna y alegre, con gran interés en la naturaleza, la política y el bienestar animal.
+      Soy economista y estudiante de estadística en la Universidad Santo Tomás.
+      Actualmente trabajo como contratista en el ICETEX desde octubre de 2024,
+      donde apoyo la optimización y sistematización de procedimientos institucionales.
+
+      Me especializo en análisis de riesgos, calidad institucional y modelos estadísticos aplicados a economía.
+
+      Me caracterizo por mi pensamiento analítico, compromiso profesional y enfoque en la mejora continua.
     </p>
+
   </section>
 
+
+  <!-- EXPERIENCIA -->
   <section id="experience">
+
     <h2>Experiencia</h2>
+
     <ul>
-      <li><strong>ICETEX</strong> – Contratista (octubre 2024 - actualidad). 
-          Servicios profesionales para optimización y sistematización de procedimientos, 
-          con enfoque en riesgos y calidad institucional.</li>
-      <li><strong>Universidad Santo Tomás</strong> – Proyectos académicos en estadística aplicada a economía y gestión de riesgos.</li>
+
+      <li>
+        <strong>ICETEX</strong> – Contratista (2024 - Actualidad)
+        <br>
+        Optimización de procesos institucionales, análisis de riesgos y mejora de calidad.
+      </li>
+
+      <li>
+        <strong>Universidad Santo Tomás</strong>
+        <br>
+        Desarrollo de proyectos estadísticos y económicos aplicados.
+      </li>
+
     </ul>
+
   </section>
 
+
+  <!-- PROYECTOS -->
   <section id="projects">
+
     <h2>Proyectos destacados</h2>
+
     <article>
+
       <h3>Modelo de predicción de riesgos financieros</h3>
-      <p>Aplicación de técnicas estadísticas para evaluar riesgos en portafolios de inversión, integrando teoría económica con práctica analítica.</p>
+
+      <p>
+        Aplicación de modelos estadísticos para análisis de riesgo en portafolios.
+      </p>
+
     </article>
+
+
     <article>
+
       <h3>Análisis de impacto social de créditos educativos</h3>
-      <p>Investigación sobre cómo los créditos del ICETEX influyen en la movilidad social y en la construcción de oportunidades para los jóvenes.</p>
+
+      <p>
+        Evaluación del impacto de créditos educativos en la movilidad social.
+      </p>
+
     </article>
+
+
     <article>
+
       <h3>Gestión de calidad en procesos financieros</h3>
-      <p>Implementación de estándares de calidad para mejorar la eficiencia y transparencia en la gestión de riesgos.</p>
+
+      <p>
+        Implementación de estándares para mejorar eficiencia institucional.
+      </p>
+
     </article>
+
+
     <article>
-      <h3>Optimización de procedimientos institucionales</h3>
-      <p>Trabajo en ICETEX para sistematizar procesos y garantizar un uso eficiente de los recursos, fortaleciendo la confianza institucional.</p>
+
+      <h3>Optimización de procesos institucionales</h3>
+
+      <p>
+        Mejora de procesos administrativos en ICETEX.
+      </p>
+
     </article>
+
   </section>
 
+
+  <!-- HABILIDADES -->
   <section id="skills">
+
     <h2>Habilidades</h2>
+
     <ul>
-      <li>Análisis de riesgos financieros y no financieros</li>
-      <li>Gestión de calidad en procesos institucionales</li>
-      <li>Optimización y sistematización de procedimientos</li>
-      <li>Modelos estadísticos aplicados a economía</li>
-      <li>Investigación social y económica</li>
-      <li>Comunicación clara y trabajo en equipo</li>
-      <li>Capacidad de liderazgo y visión estratégica</li>
+
+      <li>Análisis de riesgos</li>
+
+      <li>Modelos estadísticos</li>
+
+      <li>Optimización de procesos</li>
+
+      <li>Gestión de calidad</li>
+
+      <li>Análisis económico</li>
+
+      <li>Trabajo en equipo</li>
+
+      <li>Liderazgo</li>
+
     </ul>
+
   </section>
 
+
+  <!-- LOGROS -->
   <section id="achievements">
+
     <h2>Logros e Investigación</h2>
+
     <ul>
-      <li><strong>Calidad de la educación en Colombia:</strong> Participación en estudios sobre determinantes de la calidad educativa a nivel secundario.</li>
-      <li><strong>Rendimiento académico en pruebas Saber Pro:</strong> Investigación sobre factores que influyen en el desempeño de estudiantes universitarios.</li>
-      <li><strong>Desarrollo económico y población:</strong> Publicaciones sobre el impacto del desarrollo en la reducción de riesgos de sobrepoblación.</li>
-      <li><strong>Gestión institucional:</strong> Implementación de procesos de calidad y optimización en ICETEX para fortalecer la confianza y eficiencia.</li>
+
+      <li>Investigación sobre calidad educativa en Colombia</li>
+
+      <li>Análisis de rendimiento en pruebas Saber Pro</li>
+
+      <li>Estudios sobre desarrollo económico</li>
+
+      <li>Optimización institucional en ICETEX</li>
+
     </ul>
+
   </section>
 
+
+  <!-- VALORES -->
   <section id="values">
+
     <h2>Valores</h2>
+
     <p>
-      Mi trabajo está guiado por la ética, la transparencia y el compromiso social. 
-      Creo en la importancia de construir instituciones sólidas que generen confianza, 
-      y en el poder de la educación como motor de transformación. 
-      La calidad no es solo un estándar técnico, sino un principio que refleja respeto por las personas y por los recursos.
+
+      Mi trabajo se basa en ética, transparencia y excelencia profesional.
+      Busco generar impacto positivo mediante el análisis y la mejora institucional.
+
     </p>
+
   </section>
 
+
+  <!-- VISION -->
   <section id="vision">
+
     <h2>Visión de Futuro</h2>
+
     <p>
-      Aspiro a seguir creciendo como profesional en el campo de la economía y la estadística, 
-      aplicando mis conocimientos para diseñar soluciones que reduzcan riesgos y promuevan la equidad social. 
-      Mi objetivo es contribuir a la construcción de un país más justo, donde la educación y la calidad institucional 
-      sean pilares fundamentales para el desarrollo sostenible.
+
+      Aspiro a desarrollarme como analista de riesgos y consultor,
+      aplicando estadística y economía para mejorar instituciones y procesos.
+
     </p>
+
   </section>
 
+
+  <!-- INTERESES -->
   <section id="interests">
+
     <h2>Intereses</h2>
+
     <p>
-      Me apasiona la naturaleza y la sostenibilidad, disfruto explorar espacios verdes y aprender sobre políticas ambientales. 
-      También me interesa la política y cómo las decisiones públicas afectan la economía y la sociedad. 
-      Los animales son parte fundamental de mi vida, y me gusta participar en iniciativas de bienestar animal.
+
+      Economía, estadística, sostenibilidad, análisis de datos y políticas públicas.
+
     </p>
+
   </section>
 
+
+  <!-- CONTACTO -->
   <section id="contact">
+
     <h2>Contacto</h2>
-    <p>Encuéntrame en <a href="https://www.linkedin.com/in/lizeth-daniela-villamil-gil" target="_blank">LinkedIn</a></p>
-    <p>Email: lizeth.villamil@example.com</p>
+
+    <p>
+
+      LinkedIn:
+      <a href="https://www.linkedin.com" target="_blank">
+        Ver perfil
+      </a>
+
+    </p>
+
+    <p>Email: lizeth@email.com</p>
+
   </section>
 
+
+  <!-- FOOTER -->
   <footer>
-    <p>&copy; 2026 Lizeth Daniela Villamil Gil</p>
+
+    <p>© 2026 Lizeth Daniela Villamil Gil</p>
+
   </footer>
 
+
+  <!-- JS -->
   <script src="js/main.js"></script>
+
 </body>
 </html>
